# dataAnalysisCourse

./: .gitignore  .gitmodules  IrisDataset.xlsx  IrisNormalDistribution.xlsx
MAD_I/: IrisDataset.xlsx
MAD_I/project/analysis/: Analysis.sln
MAD_I/project/implementation/: CMakeLists.txt  Random.csv  io.h  main.cpp  network_matrix.cpp
MAD_I/python/: bipartite.py  clustering.py  mean.py
MAD_I/python/Table/: DataTable.py  PropertyCombination.py
MAD_I/r_lang/Iris/: Iris.sln
MAD_II/: eps.csv  knn.csv
MAD_II/analysis/: analysis.R  failure_attack_simulation.R  sir_script.R  values.txt
MAD_II/analysis/tex/: document.fdb_latexmk  document.fls  document.tex
MAD_II/app/: CMakeLists.txt  example_app.h  main.cpp
MAD_II/app/NetworkWizard/: NetworkWizard.pro  generate_dialog.cpp  generate_dialog.h  generate_dialog.ui  girvan_newman_dialog.cpp  girvan_newman_dialog.h  girvan_newman_dialog.ui  import_dialog.cpp  import_dialog.h  main.cpp  network_wizard.cpp  network_wizard.h  network_wizard.ui  networkwizard.cpp  networkwizard.h  networkwizard.ui  thread_jobs.h  thread_test.h  vertex_info_form.cpp  vertex_info_form.h  vertex_info_form.ui  vertex_info_model.cpp  vertex_info_model.h  wizard_state.h
MAD_II/app/include/: app_global.h  app_signals.h  network_wizard_app.h
MAD_II/app/src/: app_signals.cpp  network_wizard_app.cpp
MAD_II/app/ui_files/: #builder.ui#  draft.ui  draft.ui.bckp  draft.ui~  mainWindow.ui~
MAD_II/implementation/: CMakeLists.txt
MAD_II/implementation/networkLib/: CMakeLists.txt  main.cpp
MAD_II/networkLib/: CMakeLists.txt  main.cpp  multilayer_network.h  test.html
MAD_II/networkLib/include/networkLib/: cluster.h  community.h  epidemic_models.h  graph_component.h  io.h  iris.h  libs.h  mpx_types.h  multilayer_network.h  network_filtering.h  network_generator.h  network_generator_params.h  network_layer.h  network_matrix.h  network_report.h  temporal_converter.h  temporal_edge.h  types.h  utils.h
MAD_II/networkLib/src/: community.cpp  graph_component.cpp  io.cpp  multilayer_network.cpp  network_generator.cpp  network_layer.cpp  network_matrix.cpp  simple_string.cpp  temporal_converter.cpp
MAD_II/network_construction/: CMakeLists.txt  cluster.h  epidemic_models.h  graph_component.h  io.cpp  io.h  iris.h  k-core.csv  libs.h  main.cpp  multilayer_network.h  network_layer.cpp  network_matrix.cpp  network_matrix.h  simple_string.cpp  simple_string.h  stack.h  tmp.csv  utils.h
MAD_II/network_construction/include/networkLib/: io.h  libs.h  network_layer.h  network_matrix.h  simple_string.h
MAD_II/network_construction/networkConstructionResults/: irisCombined.csv  irisEPS.csv  iriskNN.csv
MAD_II/network_construction/src/: io.cpp  network_matrix.cpp
MAD_II/test_prep/: document.tex
MAD_II/ui/: CMakeLists.txt  builder.ui  draft.ui  draft.ui~  main.cpp  mainWindow.ui
MAD_II/ui/include/: app_global.h  app_signals.h
MAD_II/ui/src/: app_signals.cpp
MAD_III/: CMakeLists.txt  Clustering.ipynb  DimensionReduction.ipynb  ensemble.ipynb  main.py  nn.ipynb  pull.bat  regression.csv  regression.ipynb  svm.ipynb  test_regression.ipynb
MAD_III/app/: CMakeLists.txt  main.cpp
MAD_III/app/data_analysis/: patterns.h
MAD_III/app/decision_tree/: DecisionTree.cpp  DecisionTree.h  dataset.h  loading.cpp  loading.h  transaction.h
MAD_III/app/project/: csv_data_column.cpp  csv_data_column.h  dataframe.cpp  dataframe.h  ecsv.cpp  ecsv.h  ecsv_loader.cpp  ecsv_loader.h  regression_tree.cpp  regression_tree.h
MAD_III/app/tutorials/: tutorial_1.h  tutorial_2.h
MAD_III/classification/: DecisionTreeCache.csv  classification.ipynb  classification2.ipynb  mplc.csv  results.ipynb  svm.csv
MAD_III/cv4/: CountryHappiness.ipynb  clustering.py  cv4_real_data_overview.html  overview.py
MAD_III/data/: DecisionTree.ipynb  beijing_pm25_ecsv.csv  car_import.csv  car_import_original.csv  car_import_shuffled.csv  densegrid.csv  df.csv  ginitest.csv  iris.csv  real_data_classification_X.csv  real_data_classification_y.csv
MAD_III/project/: abrResults.csv  analysis.ipynb  car_regression_scikit.ipynb  citations.bib  document.tex  document.toc  gbrResult.csv  hgbrResult.csv  nn_results1.csv  nn_results2.csv  nn_results3.csv  regression_tree_results.csv  result_analysis.ipynb  rfrResults.csv  svr_results.csv
MAD_III/project/presentation/: presentation.nav  presentation.tex
MAD_III/python_clustering/: clustering.py
NetworkWizard/: NetworkWizardUI.sln
NetworkWizard/NetworkWizardLib/: GlobalSuppressions.cs  NetworkWizardLib.csproj
NetworkWizard/NetworkWizardLib/NWNetwork/: NetworkGenerator.cs  NetworkIO.cs  NetworkMatrix.cs  PathFinding.cs
NetworkWizard/NetworkWizardUI/: Form1.Designer.cs  Form1.cs  Program.cs
NetworkWizard/TestApp/: Program.cs  TestApp.csproj
data/: USairport500.csv  actorsAndMovies.txt  copy50perc.csv  cv6.r  epidemic.R  florentine.mpx  k5.csv  karate_cluster2.csv  karate_cluster3.csv  karate_kernighan.gephi  linkSelection.csv  linkSelection_Copy_Analysis.R  weather.csv
data/advanced_models/: bianconi1000.csv  bianconi1500.csv  holme100.csv  holme1000.csv  holme500.csv  holmes.csv  holmes3.csv  junk.csv
data/airbnb_prague/: listings.csv
data/ask-math/: desc.txt  sx-mathoverflow-a2q.csv
data/ask-ubuntu/: convertToCsv.py  desc.txt
data/failureAndAttack/: analysis.R
data/kcore/: karate1.csv  karate2.csv  karate3.csv
data/project/: Data.xlsx  res_sample_25p.csv  rns_sample_25p.csv
data/sampling/: analysis.R  ba.csv  baRES.csv  baRNS.csv  random.csv  randomRES.csv  randomRNS.csv  sampling.gephi
mad_iv_project/: citations.bib  document.tex  scores.md
mad_iv_project/data/: classes.csv  test.csv  train.csv
project/implementation/: CMakeLists.txt  Random.txt  io.cpp  io.h  libs.h  main.cpp  network_matrix.cpp  network_matrix.h  utils.h
python/: attr_comb.py  bipartite.py  closeness_centrality.py  cluster.py  clustering.py  distribution.py  matrix.py  network.py  networkGenerator.py  vec.py
python/Table/: Cell.py  vec.py
r_lang/: RTutorial.sln
r_lang/RTutorial/: RTutorial.rxproj  source1.R  source2.R  source3.R
(+62 files in other folders)
